git <resources>
    <string name="app_name">Group_Portfolio_HW_TEAM_BLACK_MIRROR</string>
    <string name="description_string">Welcome to our app! Here you can view the most recent projects from each member of our dedicated developer team. \n\nUse the navigation options to read all about us! </string>
    <string name="biography_text">Chelsea sees herself as a real life \'Coming to America\' story. Being born in Zimbabwe has
        given her a unique perspective of what we consider the pursuit of life, liberty, and property. Through Pursuit, she hope to become a successful developer
     and entrepreneur. Her goal is to pay it forward through a foundation focused on helping underprivileged people, like herself, learn the technical and soft skills for code. She is a huge fan of Drake, SZA, and H.E.R.\'s music.
        \nShe is currently a desktop technician and lives in Long Island, New York.</string>
    <string name="team_black_mirror">Team Black Mirror</string>
    <string name="github">GitHub</string>
    <string name="project_1_menu_title">Stringify!</string>
    <string name="project_2_menu_title">Bank of Pursuit</string>
    <string name="project_3_menu_title">Paradiso the Game</string>
    <string name="name">Chelsea Katsidzira</string>
    <string name="marly">Marly</string>
    <string name="khaing">Khaing</string>
    <string name="gregg">Gregg</string>
    <string name="chelsea">Chelsea</string>
    <string name="todo">TODO</string>
    <string name="group_portfolio">Group Portfolio</string>
    <string name="nav_home">Home</string>
    <string name="my_bio_text">I\'m a Haitian-American and lifelong student. Born and raised in Brooklyn, NY, I am currently pursing a career in tech by learning Android Development at the selective coding program called Pursuit. I love the start-up life and have worked for Taboola and quip, among other start-ups. I\'m looking forward towards a bright future and lead my life with optimism.</string>
    <string name="create_your_own_adventure">Create Your Own Adventure</string>
    <string name="bank_teller_demo">Bank Teller Demo</string>
    <string name="madlibs_app_demo">MadLibs App Demo</string>
    <string name="works">Shows Works</string>
    <string name="next">Next</string>
    <string name="bio_image">bio_image</string>
    <string name="click_here">Click Here</string>
    <string name="marly_name">Marly Dantes</string>
    <string name="khaing_name">Khaing Mar Soe</string>
    <string name="khaing_biography">\tKhaing wants to live in a world filled with innovative ideas, and books that come bundled with cakes.\n
        \n\tKhaing is currently working as an event planner at the City University of New York (CUNY).
        She can throw great parties, meetings or conferences.
        \tWhen she is not meeting with clients to work out event details such as planning the events with the clients, scouting and booking locations, food, entertainment, etc., you can find her learning how to code at Pursuit.
        She is currently enrolled in an intensive 10-month, Google-funded software engineering fellowship with a 9% acceptance rate (out of 1500+ applicants) and gaining hands-on experience with Java, Android SDK, REST APIs, Git, Data Structures, Algorithms, and tech principles and culture via both team/individual projects, code reviews, and pair programming.
        \n\tShe enjoys lounging at a beach with a good book and playing with puppies.
</string>
    <string name="picture">PICTURE</string>
    <string name="text_based_adventure_game">Game</string>
    <string name="mad_libs_story">Story</string>
    <string name="recyclerview_exercise">RecyclerView</string>
    <string name="k_biography">k_biography</string>
    <string name="khaing_mar_soe">Khaing Mar Soe</string>
    <string name="khaing_mar_soe_main_activity">KHAING MAR SOE</string>
    <string name="splash_team_black_mirror">TEAM BLACK MIRROR</string>
    <string name="splash_picture">splash_picture</string>


    <!--Gregg's Strings-->
    <string name="gregg_bio">\nBrooklyn born of Puerto Rican decent. My experience with tech started with video games such as Intellivision and Atari.
        Growing up in Brooklyn during the 90\'s, I implemented a Stoic mindset, Years before I ever heard of Stoic philosophy.
        Through this way of life, I am grateful for every single day and I give all of my heart, mind, and body to my profession.
        Through a multitude of professions. I have a rather eclectic work experience for the average Brooklynite.
        One of them being a profession as a Union Carpenter. I assisted in completing structures such as the Whitney Museum,
        432 Park Avenue(worlds tallest residential building), and many of the buildings that make the Long Island City skyline today.
        I have also had to overcome great adversity through a major career change. As a Union Carpenter, I was injured on the job and had to
        undergo over a year of weekly physical therapy while using walking devices for everyday living, However, out of this struggle, I found
        what I\'m truly made of. That I can overcome any obstacle, no matter how difficult. When I was well enough to work. /nI became a Sub Para-Professional
        for the Department of Education. Which meant, I would be a substitute for any of the 5 boroughs. During my first month. \"The Riverview school\"
        called me to sub at one of their locations. By wild luck, this location happened to be across the street from where I formally worked as a carpenter
        and was injured. It was a huge accomplishment to be able to walk through the doors of my new job. Just a stone\'s throw away from where so much
        trauma was experienced. For the past 3 years now, I have had the pleasure of teaching and assisting children with significant challenges.
        Not only have I been able to teach my students a wealth of knowledge but they have taught me so much about myself and the human condition. My goal in
        tech is to help bridge the gap in understanding, teaching, and overall communication with special needs children. Ultimately, I believe my duty
        in life is to be of service to those in need on a grand scale.</string>
    <string name="Gregg_Content_Descrip">todo</string>
    <string name="gregg_nameview">Gregg Nicholas</string>
    <string name="gregg_mad_libs_game">Mad Libs Game</string>
    <string name="gregg_text_based_adventure_game">Text Based Adventure</string>
    <string name="greggnicholas_pursuit_org">Greggnicholas@pursuit.org</string>
    <string name="gregg_clickable_images_buttons">Clickable Buttons Exercise</string>
    <string name="gregg_name">Gregg Nicholas</string>

</resources>
