<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".Biography"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/my_bio"
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="178dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:src="@mipmap/ic_marly_pic_round"
                android:background="@drawable/bio_pic_background"
                android:contentDescription="@string/bio_image"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="@id/tv"
                app:srcCompat="@mipmap/ic_marly_pic_round"
                tools:srcCompat="@mipmap/ic_marly_pic_round" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="317dp"
                android:fontFamily="@font/roboto"
                android:text="@string/my_bio_text"
                android:textAlignment="textStart"
                android:textColor="#ffffff"
                android:textSize="22sp"
                android:typeface="normal" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#cbfc011a"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_bio"
        app:layout_constraintVertical_bias="0.787" />

</android.support.constraint.ConstraintLayout>