<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteY="81dp"
    tools:context=".Khaing_Biography">

    <include
        layout="@layout/drawer_layout" />

    <TextView
        android:id="@+id/subheading"
        android:layout_width="282dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/khaing_mar_soe"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/give_you_glory"
        app:layout_constraintBottom_toTopOf="@+id/khaing_scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:id="@+id/khaing_scrollview"
        android:layout_width="match_parent"
        android:layout_height="445dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="178dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bio_pic_background"
                android:contentDescription="@string/bio_image"
                android:src="@drawable/khaing_soe"
                android:visibility="visible" />
            <TextView
                android:id="@+id/k_biography"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                android:text="@string/khaing_biography"
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/give_you_glory"
                android:textSize="15sp"
                android:scrollbars="vertical"
                android:textStyle="italic"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>